@@ -857,6 +857,12 @@
 #endif
 
 
+/* Define if your assembler supports @gnu_unique_object. */
+#ifndef USED_FOR_TARGET
+#undef HAVE_GAS_GNU_UNIQUE_OBJECT
+#endif
+
+
 /* Define if your assembler and linker support .hidden. */
 #undef HAVE_GAS_HIDDEN
 
